fix(sidebar): fixing alignment bug in iOS Safari

--- a/css/templates/lune/components/_sidebar.css
+++ b/css/templates/lune/components/_sidebar.css
@@ -1,6 +1,7 @@
 .ampstart-sidebar {
   width: 80vw;
   display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
@@ -9,6 +10,7 @@
 .ampstart-sidebar-header {
   position: absolute;
   top: 0;
+  left: var(--space-3);
   height: var(--navbar-height);
 }
 
